--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,24 +1,14 @@
-<html>
-  <head>
-    <title>{{title}} - microblog</title>
-  </head>
-  <body>
-      <h3>Hello, {{user.nickname}}!</h3>
-      <table border="1">
-         <tr>
-             <td><b>First Name of Agent</b></td>
-             <td><b>Surname of agent</b></td>
-          </tr>
-      {% for k in users.keys() %}
-          <tr>
-              <td>
-                  {{users.get(k).get("FirstName")}}
-              </td>
-              <td>
-                  {{users.get(k).get("Surname")}}
-              </td>
-          </tr>
-      {% endfor %}
-      </table>
-  </body>
-</html>
+{% extends "base.html" %}
+{% block head %}
+    {{ super() }}
+    <style type="text/css">
+        .important { color: #336699; }
+    </style>
+{% endblock %}
+{% block content %}
+      <a href="/agents">agents</a><br>
+      <a href="/login">login</a>
+      {#
+       Output main table of agents.
+       #}
+{% endblock %}
