--- a/app/templates/agents_list.html
+++ b/app/templates/agents_list.html
@@ -1,13 +1,27 @@
 {% extends "base.html" %}
-    {% block head %}
-      <link rel=stylesheet type=text/css href="{{url_for('static',filename='css_agents_list.css')}}">
-      <title>Agents List</title>
-      <meta charset='utf-8'>
-    {% endblock %}
-    {% block content %}
-     <div class="agents_table">Here will Table of agents</div>
-    {% endblock %}
-  {% block footer %}
-   block footer 2
-   <a href="/">index</a>
-  {% endblock %}
+{% block head %}
+    {{ super() }}
+    <style type="text/css">
+        .important { color: #336699; }
+    </style>
+{% endblock %}
+{% block content %}
+      <h3>Hello, {{user.nickname}}!</h3>
+      <a href="/">index</a>
+      <table border="1">
+         <tr>
+             <td><b>First Name of Agent</b></td>
+             <td><b>Surname of agent</b></td>
+          </tr>
+      {% for k in users.keys() %}
+          <tr>
+              <td>
+                  {{users.get(k).FirstName}}
+              </td>
+              <td>
+                  {{users.get(k).Surname}}
+              </td>
+          </tr>
+      {% endfor %}
+      </table>
+{% endblock %}
